Fix overflow space on right side of website

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body {
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
   background-color: #EEE;
+  overflow-x: hidden;
 }
 
 html {
